Fix board card pictures overflow

--- a/src/app/components/SwiperCards/SwiperBoardCard/SwiperBoardCard.scss
+++ b/src/app/components/SwiperCards/SwiperBoardCard/SwiperBoardCard.scss
@@ -42,6 +42,7 @@
       max-height: 64px;
       background: var(--primary);
       border-radius: 50%;
+      overflow: hidden;
 
       &-placeholder {
         width: 44px;
